<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPage"
    android:label="@string/actionbar_title"
    android:background="@color/colorWhite"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal|vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:background="@color/colorWhite">

        <HorizontalScrollView
            android:id="@+id/horizontalView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:scrollbars="horizontal|vertical"
            android:background="@color/colorWhite">

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="0"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                android:background="@color/colorWhite"
                >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    >

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/timetransit"
                        android:contentDescription="@string/app_name" />

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    >

                    <TextView
                        android:id="@+id/tv_br"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Line"
                        android:layout_margin="10dp"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        >
                    </TextView>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    >

                    <Spinner
                        android:id="@+id/sp_line"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:entries="@array/line_list"
                        android:inputType="number"
                        android:spinnerMode="dropdown"></Spinner>


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    >

                    <TextView
                        android:id="@+id/tv_bb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Station"
                        android:layout_margin="10dp"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        >
                    </TextView>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    >

                    <Spinner
                        android:id="@+id/sp_station"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:entries="@array/station_list"
                        android:inputType="number"
                        android:spinnerMode="dropdown"></Spinner>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    >

                    <TextView
                        android:id="@+id/tv_dit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Day Type"
                        android:layout_margin="10dp"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        >
                    </TextView>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    >

                    <Spinner
                        android:id="@+id/sp_day"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:entries="@array/day_list"
                        android:inputType="number"
                        android:spinnerMode="dropdown"></Spinner>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    >

                    <TextView
                        android:id="@+id/tv_store"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Travel Hour"
                        android:layout_margin="10dp"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        >
                    </TextView>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    >

                    <Spinner
                        android:id="@+id/sp_hour"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:entries="@array/hour_list"
                        android:inputType="number"
                        android:spinnerMode="dropdown"></Spinner>

                </TableRow>



                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/tv_lc_errmsg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorPrimary"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="0dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp">

                    <Button
                        android:id="@+id/buybutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/prdict_button_label"
                        android:onClick="predictValue"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="0dp" />
                </TableRow>


            </TableLayout>


        </HorizontalScrollView>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
